# raga-llm-hub

./: .gitignore  .pre-commit-config.yaml  .pylintrc  DataPolicy  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.hooks/: prevent-main-commit.sh
examples/: Evaluation_Tests_walkthrough_using_raga_llm_hub.ipynb  Guardrails_walkthrough_by_raga_llm_hub.ipynb
src/raga_llm_hub/: __init__.py  api_client_manager.py  db_manager.py  raga_llm_eval.py  raga_llm_observer.py  result_manager.py  test_manager.py  track_manager.py
src/raga_llm_hub/guardrails/: __init__.py  anonymize.py  ban_competitors.py  ban_substrings.py  ban_topics.py  code.py  deanonymize.py  factual_consistency.py  gibberish.py  invisible_text.py  ir_metrics_test.py  json_verify.py  language.py  language_same.py  malicious_url.py  match_type.py  no_refusal.py  nsfw.py  politeness.py  profanity.py  reading_time.py  regex.py  secrets.py  sensitive.py  sentiment.py  token_limit.py  url_reachability.py  utils.py  valid_csv.py  valid_python.py  valid_sql.py
src/raga_llm_hub/guardrails/anonymize_helpers/: __init__.py  analyzer.py  faker.py  regex_patterns.py  transformers_helpers.py  transformers_recognizer.py
src/raga_llm_hub/guardrails/resources/: sensitive_patterns.json
src/raga_llm_hub/metrics/: base_metrics.py  ir_metrics_test.py
src/raga_llm_hub/metrics/retrieval/: __init__.py  accuracy.py  ap.py  bpm.py  bpref.py  compat.py  f1_at_k.py  f1_score.py  infAP.py  insq.py  inst.py  iprec.py  judged.py  ndcg.py  nerr10.py  nerr11.py  nerr8.py  nerr9.py  numq.py  numrel.py  numret.py  p.py  precision.py  precision_at_k.py  r.py  rbp.py  recall.py  recall_at_k.py  retrieval_metrics.py  rprec.py  sdcg.py  setap.py  setf.py  setp.py  setr.py  success.py
src/raga_llm_hub/observer/: __init__.py  raga_observer.py
src/raga_llm_hub/tests/: __init__.py  bias_test.py  chunk_impact_test.py  coherence_test.py  complexity_test.py  conciseness_test.py  consistency_test.py  context_retrieval_metrics_test.py  contextual_precision_test.py  contextual_recall_test.py  contextual_relevancy_test.py  correctness_test.py  cosine_similarity_test.py  cost_test.py  cover_test.py  dan_detectors.py  dan_probes.py  dan_vulnerability_scanner.py  faithfulness_test.py  generic_evaluation_test.py  grade_score_test.py  hallucination_test.py  harmless_test.py  ir_metrics_test.py  latency_test.py  length_test.py  lmrc_detectors.py  lmrc_probes.py  lmrc_vulnerability_scanner.py  maliciousness_test.py  matcher.py  overall_test.py  pos_test.py  prompt_injection_modeleval.py  prompt_injection_test.py  prompt_template.py  readability_test.py  refusal_test.py  relevancy_test.py  response_toxicity_test.py  (+8 more)
src/raga_llm_hub/tests/test_data/: __init__.py  context_retrieval_metrics_test.toml  test_data.py
src/raga_llm_hub/ui/: .gitignore  README.md  app.py  helpers.py
src/raga_llm_hub/ui/pages/: index.py  trace.py
src/raga_llm_hub/ui/static/: main.js  style.css
src/raga_llm_hub/ui/templates/: base.html  index.html  trace.html
src/raga_llm_hub/utils/: utils.py
src/raga_llm_hub/utils/data_files/: inthewild_jailbreak_llms.txt  ofcom-potentially-offensive.txt  profanity_en.csv
(+74 files in other folders)
