[project]
name = "raga-llm-hub"
version = "1.0.0.11"
authors = [{ name = "Raga AI", email = "rehan.asif@raga.ai" }]
description = "Package for LLM Evaluation"
readme = "README.md"
keywords = ["ragaai", "raga", "llm", "testing", "llm-eval", "llm-hub"]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

requires-python = ">=3.8"

dependencies = [
    "prettytable==3.9.0",
    "toml==0.10.2",
    "datasets==2.16.1",
    "vaderSentiment==3.3.2",
    "llama_index==0.9.48",
    "nltk==3.8.1",
    "tensorflow",
    "sentence_transformers==2.4.0",
    "textstat==0.7.3",
    "ir_measures==0.3.3",
    "optimum==1.17.1",
    "spacy==3.7.4",
    "presidio-analyzer==2.2.353",
    "presidio-anonymizer==2.2.353",
    "detect-secrets==1.4.0",
    "span-marker==1.5.0",
    "promptinject==0.1.1.1",
    "rapidfuzz==3.6.1",
    "langchain==0.1.9",
    "openai==1.11.1",
    "transformers==4.38.1",
    "Faker==23.2.1",
    "structlog==24.1.0",
    "json-repair==0.9.0",
    "fuzzysearch==0.7.3",
    "waitress==3.0.0",
    "sqlvalidator==0.0.20"
]

[project.optional-dependencies]
ui = ["Flask==3.0.2"]
onnxruntime = []
onnxruntime-gpu = []
docs-dev = [
    "mkdocs==1.5.3",
    "mkdocs-autorefs==0.5.0",
    "mkdocs-material==9.5.9",
    "mkdocs-material-extensions==1.3.1",
    "mkdocstrings==0.24.0",
    "mkdocstrings-python==1.8.0"
]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "build"
]

[project.urls]
Homepage = "https://raga.ai"
Documentation = "https://docs.raga.ai/"
Repository = "https://github.com/raga-ai-hub/raga-llm-hub"
Issues = "https://github.com/raga-ai-hub/raga-llm-hub/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["src/raga_llm_hub/tests/test_details.toml",
       "src/raga_llm_hub/utils/data_files/profanity_en.csv",
       "src/raga_llm_hub/utils/data_files/ldnoobw-en.txt",
       "src/raga_llm_hub/utils/data_files/ofcom-potentially-offensive.txt",
       "src/raga_llm_hub/utils/data_files/inthewild_jailbreak_llms.txt",
       "src/raga_llm_hub/ui/templates/*.html",
       "src/raga_llm_hub/ui/templates/components/*.html",
       "src/raga_llm_hub/ui/static/*.png",
       "src/raga_llm_hub/ui/static/*.js",
       "src/raga_llm_hub/ui/static/*.css",
       "src/raga_llm_hub/guardrails/resources/sensitive_patterns.json"
    ]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
line-length = 88
exclude = '''
/(
    .eggs
  | .git
  | .hg
  | .mypy_cache
  | .tox
  | .venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
